@@ -1,6 +1,7 @@
 Release 0.9
 
 #4 FactoryConfigurationService - support for loading parameterized types
+#6 Service/Module override support
 
 Release 0.8
 
